force-app/main/default/objects/VisMed_Ciclo__c/VisMed_Ciclo__c.object-meta.xml
<CustomObject>
    <label>Ciclo</label>
    <nameField>
        <label>Ciclo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ciclos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>