force-app/main/default/objects/VisMed_Ciclo__c/fields/Anio__c.field-meta.xml
<CustomField>
    <fullName>Anio__c</fullName>
    <formula>YEAR(Fecha_de_inicio__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Año</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>