force-app/main/default/objects/VisMed_Ciclo__c/fields/Numero_de_mes__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_mes__c</fullName>
    <formula>MONTH(Fecha_de_inicio__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero de mes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>