force-app/main/default/objects/VisMed_Ciclo__c/fields/VisMed_Cmpt_Tiempo_no_promocional__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Cmpt_Tiempo_no_promocional__c</fullName>
    <defaultValue>$CustomMetadata.Compensatorio_Tiempo_no_Promocional__mdt.Compensatorio_General.Compensatorio__c</defaultValue>
    <label>Compensatorio Tiempo no Promocional</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>