force-app/main/default/objects/VisMed_Ciclo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fecha_de_inicio__c</columns>
    <columns>Fecha_de_Fin__c</columns>
    <columns>Numero_de_mes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Anio__c</field>
        <operation>greaterOrEqual</operation>
        <value>2024</value>
    </filters>
    <label>All</label>
</ListView>